made button.primary text colour NOT important so I can hard code modifications later

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2033,7 +2033,7 @@ input, select, textarea {
 		button.primary,
 		.button.primary {
 			background-color: #ffffff;
-			color: #272f22 !important;
+			color: #272f22;
 		}
 
 			input[type="submit"].primary:after,
